--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
         "kraken-js": "^1.0.1",
         "kraken-devtools": "^1.0.0",
         "engine-munger": "^0.2.0",
-        "express": "^4.3.0"
+        "express": "^4.3.0",
+        "needle": "*",
+        "cheerio": "*",
+        "dustjs-linkedin": "2.6.2",
+        "dustjs-helpers": "1.7.3"
     },
     "devDependencies": {
         "mocha": "^1.18.0",
